--- a/grid3.html
+++ b/grid3.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>GRid-2</title>
+	<title>Grid-3</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body class="container">
 	<section class="row">
-		<div class="col-12 height-1"></div>
-		<div class="col-4 height-2"></div>
+		<div class="col-12 height-2"></div>
+		<div class="col-4 height-1"></div>
+		<div class="col-4 height-1"></div>
+		<div class="col-4 height-1"></div>
 	</section>
 
 	
