--- a/grid6.html
+++ b/grid6.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Grid-2</title>
-	<link rel="stylesheet" href="css/main.css">
+	<title>Grid-6</title>
+	<link rel="stylesheet" href="css/main3.css">
 </head>
 <body class="container">
 	<section class="row">
-		<div class="col-12 height-2"></div>
 		<div class="col-4 height-1"></div>
 		<div class="col-4 height-1"></div>
 		<div class="col-4 height-1"></div>
-	</section>
-
-	
+		<div class="col-8 height-2"></div>
+		<div class="col-4 height-2"></div>
+	</section>	
 </body>
 </html>
