--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ejercicio-Guiado</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-	<h1>Ejercicio GRID</h1>
+	<h1><span class="fa fa-cloud"></span> Ejercicio GRID </h1>
 	<h2>Selecciona una grilla de ejemplo</h2>
 	<nav>	
 		<ul>
@@ -30,5 +31,8 @@
 			<li><a href="grid9.html">GRID 9</a></li>
 		</ul>
 	</nav>
+	<footer>
+		<div>&copy; 2017 for R Emma Tapia Alva <span class="fa fa-heart"></span></div>
+	</footer>
 </body>
 </html>
