--- a/grid4.html
+++ b/grid4.html
@@ -3,12 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Grid-4</title>
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body class="container">
 	<section class="row">
-		
-		
+		<div class="col-12 height-1"></div>
+		<div class="col-4 height-2"></div>
 	</section>
+
 	
 </body>
 </html>
