--- a/grid9.html
+++ b/grid9.html
@@ -2,17 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Grid-2</title>
-	<link rel="stylesheet" href="css/main.css">
+	<title>Grid-9</title>
+	<link rel="stylesheet" href="css/main9.css">
 </head>
 <body class="container">
 	<section class="row">
-		<div class="col-12 height-2"></div>
+		<div class="col-8 height-1"></div>
 		<div class="col-4 height-1"></div>
-		<div class="col-4 height-1"></div>
-		<div class="col-4 height-1"></div>
+		<div class="col-4 height-2"></div>
 	</section>
-
 	
 </body>
 </html>
