--- a/grid6.html
+++ b/grid6.html
@@ -13,5 +13,6 @@
 		<div class="col-8 height-2"></div>
 		<div class="col-4 height-2"></div>
 	</section>	
+	<a href="index.html" class="menu">Menu</a>
 </body>
 </html>
