--- a/grid8.html
+++ b/grid8.html
@@ -10,6 +10,6 @@
 		<div class="col-8 height-1"></div>
 		<div class="col-4 height-2"></div>
 	</section>
-	
+	<a href="index.html" class="menu">Menu</a>
 </body>
 </html>
