--- a/grid1.html
+++ b/grid1.html
@@ -17,5 +17,6 @@
 		<div class="col-4 height-2"></div>
 		<div class="col-4 height-2"></div>
 	</section>
+	<a href="index.html" class="menu">Menu</a>
 </body>
 </html>
