--- a/grid3.html
+++ b/grid3.html
@@ -12,6 +12,7 @@
 		<div class="col-8 height-1"></div>
 		<div class="col-4 height-1"></div>		
 	</section>
+	<a href="index.html" class="menu">Menu</a>
 	
 </body>
 </html>
