--- a/grid4.html
+++ b/grid4.html
@@ -10,7 +10,7 @@
 		<div class="col-12 height-1"></div>
 		<div class="col-4 height-2"></div>
 	</section>
-
+	<a href="index.html" class="menu">Menu</a>
 	
 </body>
 </html>
