--- a/grid5.html
+++ b/grid5.html
@@ -15,6 +15,7 @@
 		<div class="col-4 height-2"></div>
 		<div class="col-4 height-2"></div>
 	</section>
+	<a href="index.html" class="menu">Menu</a>
 	
 </body>
 </html>
