--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Ejercicio-Guiado</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<h1><span class="fa fa-cloud"></span> Ejercicio GRID </h1>
-	<h2>Selecciona una grilla de ejemplo</h2>
+	<h1 class="title"><span class="fa fa-cloud"></span> Ejercicio GRID </h1>
+	<h2 class="title">Selecciona una grilla de ejemplo</h2>
 	<nav>	
 		<ul>
 			<li>
